--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <h2> Disabled woman's 1,000 calls for Ed Sheeran ticket</h2> <br><br>
             <p> By Natalie Grice <br>
                 BBC News <br> <br>
-                <img src="images/a.jpg" alt="BBC News"> <br><br>
+                <img src="images/a(1).jpg" alt="BBC News"> <br><br>
                 <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
                 <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
                 <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -247,7 +247,7 @@
             <h2> Police offer 'front row seat' to busy Saturday</h2> <br><br>
             <p> By Natalie Grice <br>
                 BBC News <br> <br>
-                <img src="images/b.jpg" alt="BBC News"> <br><br>
+                <img src="images/b(1).jpg" alt="BBC News"> <br><br>
                 <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
                 <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
                 <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -267,7 +267,7 @@
         <h2> 'I saw my father's dead body on Facebook'</h2> <br><br>
         <p> By Natalie Grice <br>
             BBC News <br> <br>
-            <img src="images/c.jpg" alt="BBC News"> <br><br>
+            <img src="images/c(1).jpg" alt="BBC News"> <br><br>
             <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
             <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
             <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -285,7 +285,7 @@
         <h2> Former diplomat claims to have MP's hacked emails</h2> <br><br>
         <p> By Natalie Grice <br>
             BBC News <br> <br>
-            <img src="images/d.jpg" alt="BBC News"> <br><br>
+            <img src="images/d(1).jpg" alt="BBC News"> <br><br>
             <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
             <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
             <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -304,7 +304,7 @@
         <h2>Tate was violent and coercive, says ex-girlfriend</h2> <br><br>
         <p> By Natalie Grice <br>
             BBC News <br> <br>
-            <img src="images/e.jpg" alt="BBC News"> <br><br>
+            <img src="images/e(1).jpg" alt="BBC News"> <br><br>
             <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
             <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
             <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -324,7 +324,7 @@
         <h2> O2 disruption in south Down 'until 25 February'</h2> <br><br>
         <p> By Natalie Grice <br>
             BBC News <br> <br>
-            <img src="images/f.jpg" alt="BBC News"> <br><br>
+            <img src="images/f(1).jpg" alt="BBC News"> <br><br>
             <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
             <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
             <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
@@ -344,7 +344,7 @@
         <h2> Yahoo to slash 20% of its workforce</h2> <br><br>
         <p> By Natalie Grice <br>
             BBC News <br> <br>
-            <img src="images/g.jpg" alt="BBC News"> <br><br>
+            <img src="images/g(1).jpg" alt="BBC News"> <br><br>
             <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
             <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
             <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
