--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <h2> Disabled woman's 1,000 calls for Ed Sheeran ticket</h2> <br><br>
             <p> By Natalie Grice <br>
                 BBC News <br> <br>
-                <img src="images/a(1).jpg" alt="BBC News"> <br><br>
+                <img src="images/a(1).jpg" alt="BBC"> <br><br>
                 <a href="#"> <i class="fa fa-facebook" style="font-size: 25px;"></i></a>
                 <a href="#"><i class="fa fa-twitter" style="font-size: 25px;"></i></a>
                 <a href="#"> <i class="fa fa-share" style="font-size: 25px;"></i></a>
