--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <span class="news" id="topic"> Tech</span>
     <div class="section">
         <div class="main-p">
-            <img src="images/_128589449_yahoo-index-getty.jpg" class="main-img" alt="Image">
+            <img src="images/h.jpg" class="main-img" alt="Image">
             <br>
             <h1> <a href="#" class="news"> Tech layoffs: Yahoo to slash 20% of its workforce
                     Published</a>
@@ -101,7 +101,7 @@
         </div>
 
         <div class="subitems">
-            <img src="images/_128582604_hog4.jpeg" alt="BBC News">
+            <img src="images/i.jpg" alt="BBC News">
             <p>
                 <a href="#" class="sub-heading">
                     Seven Russians punished for ransomware cyber-crime </a><br><br>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="subitems">
-            <img src="images/_128581635_gettyimages-530860550.jpg" alt="BBC News">
+            <img src="images/j.jpg" alt="BBC News">
             <p>
                 <a href="#" class="sub-heading">
                     Hogwarts Legacy game comes out as online debate continues </a><br><br>
@@ -123,7 +123,7 @@
 
     <div class="section1">
         <div class="subitems">
-            <img src="images/_128578707_9003c164-4518-4939-a0bf-1c96b21289ea.jpg" alt="BBC News">
+            <img src="images/k.jpg" alt="BBC News">
             <p>
                 <a href="#" class="sub-heading">
                     Ukraine barred from using SpaceX tech for drones</a> <br><br>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="subitems">
-            <img src="images/_128575602_twitter-index-afp.jpg" alt="BBC News">
+            <img src="images/m.jpg" alt="BBC News">
             <p>
                 <a href="#" class="sub-heading">
                     Twitter outage as users told they tweeted too much </a><br><br>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="subitems">
-            <img src="images/_128573172_starlink-index-reuters.jpg" alt="BBC News">
+            <img src="images/2.jpg" alt="BBC News">
             <p>
                 <a href="#" class="sub-heading">
                     Watchdog warns over surveillance tech rule changes </a><br> <br>
